tests/NormalTests/paczka1/fuzzy1/97618835.err
Error in line 1: SuOn S241 75,3
Error in line 11: KXcVu2FfYP0 S732 30,3
Error in line 16: S241 S732 5,28
Error in line 14: IW3vBvuX03z A11 29,7
Error in line 7: NFAMhejfrH S312 65,9
Error in line 23: IW3vBvuX03z S732 69,3
Error in line 34: S241 S732 62,6
